# eACGM

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
demo/: pytorch_example.py  sampler_cuda.py  sampler_eacg.py  sampler_gpu.py  sampler_nccl.py  sampler_nvml.py  sampler_python.py  sampler_torch.py  webui.py
eacgm/bpf/: __init__.py  base.py  bccBPF.py
eacgm/collector/: __init__.py  profetto.py
eacgm/sampler/: __init__.py  base.py  ebpfsampler.py  gpusampler.py  nvmlsampler.py
eacgm/webui/: __init__.py  connect.py  insert.py  reader.py
grafana/: launch.sh  service.sh  stop.sh
grafana/compose/: docker-compose.yml
grafana/compose/grafana/: dockerfile  grafana.db  grafana.ini
grafana/compose/mysql/: dockerfile  init.sql
grafana/src/ollamanet/: connect.py  init_database.sql  listen.sh  makefile  tailf.py  trace.txt
grafana/src/state_timeline/: init_database.sql  insert_data.py  log_reader.py
grafana/src/state_timeline/log/: trace_ollama.txt
grafana/src/top/: init_database.sql  top.py
