[project]
name = "eACGM"
version = "0.1.0"
description = "eACGM: An eBPF-based Automated Comprehensive Governance and Monitoring framework for AI/ML systems. (IWQoS 2025)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ruilin Xu", email = "xurlin5@mail2.sysu.edu.cn"},
    {name = "Zongxuan Xie", email = "xiezx25@mail2.sysu.edu.cn"},
]
dependencies = [
    "bcc>=0.1.10",
    "pymysql>=1.1.1",
    "pynvml>=12.0.0",
    "tqdm>=4.67.1",
]
